refatoração e simplificação da documentação
