# src/main/java/com/algaworks/fastpay/application/controller/FastPayCreditCardController.java
@@ -4,6 +4,7 @@ import com.algaworks.fastpay.application.config.FastPayProperties;
 import com.algaworks.fastpay.application.exception.AccessDeniedOnResourceException;
 import com.algaworks.fastpay.application.exception.BusinessException;
 import com.algaworks.fastpay.application.exception.CreditCardAlreadyAssignedCustomerException;
+import com.algaworks.fastpay.application.exception.DomainEntityNotFound;
 import com.algaworks.fastpay.application.model.LimitedCreditCardModel;
 import com.algaworks.fastpay.application.model.TokenizedCreditCardInput;
 import com.algaworks.fastpay.domain.model.creditcard.CreditCard;
@@ -11,7 +12,6 @@ import com.algaworks.fastpay.domain.model.creditcard.CreditCardRepository;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -33,12 +33,12 @@ public class FastPayCreditCardController {
             throw new AccessDeniedOnResourceException("Use a valid private token.");
         }
 
-        CreditCard creditCard = creditCardRepository.findById(input.getTokenizedCardId())
+        CreditCard creditCard = creditCardRepository.findByToken(input.getTokenizedCard())
                 .orElseThrow(() -> new BusinessException("Tokenized card not found."));
 
         if (creditCard.isAssigned()) {
             throw new CreditCardAlreadyAssignedCustomerException(
-                    "Tokenized card is already assigned to a customer.", input.getTokenizedCardId());
+                    "Tokenized card is already assigned to a customer.", input.getTokenizedCard());
         }
 
         if (creditCard.isAssignmentExpired()) {
@@ -46,8 +46,7 @@ public class FastPayCreditCardController {
             throw new BusinessException("Tokenized card is expired.");
         }
 
-        creditCard.setCustomerCode(input.getCustomerCode());
-        creditCard.removeExpiration();
+        creditCard.assign(input.getCustomerCode());
 
         creditCardRepository.saveAndFlush(creditCard);
 
@@ -58,6 +57,19 @@ public class FastPayCreditCardController {
     public List<LimitedCreditCardModel> findAllByCustomer(@RequestParam String customerCode) {
         return creditCardRepository.findAllByCustomerCode(customerCode)
                 .stream().map(LimitedCreditCardModel::of).toList();
+    }
+
+    @DeleteMapping("/api/v1/credit-cards/{creditCardId}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void deleteById(@RequestParam String creditCardId) {
+        creditCardRepository.deleteById(creditCardId);
+    }
+
+    @GetMapping("/api/v1/credit-cards/{creditCardId}")
+    public LimitedCreditCardModel getById(@RequestParam String creditCardId) {
+        CreditCard creditCard = creditCardRepository.findById(creditCardId)
+                .orElseThrow(()-> new DomainEntityNotFound(String.format("Credit card %s not found.", creditCardId)));
+        return LimitedCreditCardModel.of(creditCard);
     }
 
 }
