# src/main/java/com/algaworks/fastpay/application/model/TokenizedCreditCardInput.java
@@ -1,9 +1,12 @@
 package com.algaworks.fastpay.application.model;
 
+import jakarta.validation.constraints.NotBlank;
 import lombok.Data;
 
 @Data
 public class TokenizedCreditCardInput {
-	private String tokenizedCardId;
+	@NotBlank
+	private String tokenizedCard;
+	@NotBlank
 	private String customerCode;
 }
